add - Added new localizations (validation)
---

We've added localizations for the settings validation mechanism.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
@@ -4216,6 +4216,11 @@
     "جاري محاولة تسجيل إعداد أساسي بمحتوى غير صالح. راجع مصحح أخطاء النواة لمزيد من المعلومات.",
     "اختر مُدخلاً لـ",
     "لا يمكن تحديد التكوين",
-    "يحتوي واحد أو أكثر من مُدخلات التكوين على متغيرات أو تعدادات غير صالحة ويحتاج إلى إصلاح. راجع مصحح أخطاء النواة لمزيد من المعلومات."
+    "يحتوي واحد أو أكثر من مُدخلات التكوين على متغيرات أو تعدادات غير صالحة ويحتاج إلى إصلاح. راجع مصحح أخطاء النواة لمزيد من المعلومات.",
+    "قد لا يكون اسم إدخال الإعدادات فارغًا.",
+    "قد لا يكون وصف إدخال الإعدادات فارغًا.",
+    "قد لا تحتوي قائمة مفاتيح الإعدادات على إدخال إعدادات فارغ.",
+    "قد لا يكون اسم مفتاح الإعدادات فارغًا.",
+    "قد لا يحتوي مفتاح الإعدادات على نوع مفتاح غير صالح."
   ]
 }
