--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb.json
@@ -4216,6 +4216,11 @@
     "jari muhawalat tasjil 'iiedad 'asasiin bimuhtawaa ghayr salih. rajae musahah 'akhta' alnawaat limazid min almaelumati.",
     "akhtar mudkhlaan l",
     "la yumkin tahdid altakwin",
-    "yahtawy wahid 'aw 'akthar min mudkhlat altakwin ealaa mutaghayirat 'aw taedadat ghayr salihat wayahtaj 'iilaa 'iislahi. rajie musahah 'akhta' alnawaat limazid min almaelumati."
+    "yahtawy wahid 'aw 'akthar min mudkhlat altakwin ealaa mutaghayirat 'aw taedadat ghayr salihat wayahtaj 'iilaa 'iislahi. rajie musahah 'akhta' alnawaat limazid min almaelumati.",
+    "qad la yakun asm 'iidkhal al'iiedadat farghan.",
+    "qad la yakun wasf 'iidkhal al'iiedadat farghan.",
+    "qad la tahtawi qayimat mafatih al'iiedadat ealaa 'iidkhal 'iiedadat farghi.",
+    "qad la yakun asm miftah al'iiedadat farghan.",
+    "qad la yahtawi miftah al'iiedadat ealaa nawe miftah ghayr salihi."
   ]
 }
