--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi.json
@@ -4216,6 +4216,11 @@
     "Chángshì zhùcè bāohán wúxiào nèiróng de jīběn shèzhì. Yǒuguān gèng duō xìnxī, qǐng zīxún nèihé tiáoshì qì.",
     "Xuǎnzé yīgè tiáomù",
     "wúfǎ xuǎnzé pèizhì",
-    "yīgè huò duō gè pèizhì tiáomù bāohán wúxiào biànliàng huò méi jǔ, xūyào xiūfù. Yǒuguān gèng duō xìnxī, qǐng zīxún nèihé tiáoshì qì."
+    "yīgè huò duō gè pèizhì tiáomù bāohán wúxiào biànliàng huò méi jǔ, xūyào xiūfù. Yǒuguān gèng duō xìnxī, qǐng zīxún nèihé tiáoshì qì.",
+    "Shèzhì tiáomù míngchēng bùnéng wéi kōng",
+    "shèzhì tiáomù miáoshù bùnéng wéi kōng",
+    "shèzhì tiáomù dì shèzhì jiàn lièbiǎo bùnéng wéi kōng",
+    "shèzhì jiàn míngchēng bùnéng wéi kōng",
+    "shèzhì jiàn bùnéng bāohán wúxiào de jiàn lèixíng"
   ]
 }
