--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/grk.json
@@ -4216,6 +4216,11 @@
     "Προσπάθεια εγγραφής μιας βασικής ρύθμισης με μη έγκυρο περιεχόμενο. Συμβουλευτείτε το πρόγραμμα εντοπισμού σφαλμάτων του πυρήνα για περισσότερες πληροφορίες",
     "Επιλέξτε μια καταχώρηση για",
     "Δεν είναι δυνατή η επιλογή διαμόρφωσης",
-    "Μία ή περισσότερες από τις καταχωρήσεις διαμόρφωσης έχουν μη έγκυρες μεταβλητές ή απαριθμήσεις και πρέπει να διορθωθούν. Συμβουλευτείτε το πρόγραμμα εντοπισμού σφαλμάτων του πυρήνα για περισσότερες πληροφορίες."
+    "Μία ή περισσότερες από τις καταχωρήσεις διαμόρφωσης έχουν μη έγκυρες μεταβλητές ή απαριθμήσεις και πρέπει να διορθωθούν. Συμβουλευτείτε το πρόγραμμα εντοπισμού σφαλμάτων του πυρήνα για περισσότερες πληροφορίες.",
+    "Το όνομα καταχώρισης ρυθμίσεων ενδέχεται να μην είναι κενό",
+    "Η περιγραφή της καταχώρισης ρυθμίσεων ενδέχεται να μην είναι κενή",
+    "Η καταχώριση ρυθμίσεων ενδέχεται να μην έχει κενή λίστα πλήκτρων ρυθμίσεων",
+    "Το όνομα του κλειδιού ρυθμίσεων ενδέχεται να μην είναι κενό",
+    "Το κλειδί ρυθμίσεων ενδέχεται να μην περιέχει μη έγκυρο τύπο κλειδιού"
   ]
 }
