--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
@@ -4216,6 +4216,11 @@
     "無効な内容のベース設定を登録しようとしています。詳細についてはカーネルデバッガーを参照してください。",
     "エントリを選択してください",
     "構成を選択できません",
-    "1 つ以上の構成エントリに無効な変数または列挙型が含まれているため、修正する必要があります。詳細についてはカーネルデバッガーを参照してください。"
+    "1 つ以上の構成エントリに無効な変数または列挙型が含まれているため、修正する必要があります。詳細についてはカーネルデバッガーを参照してください。",
+    "設定エントリ名は空にできません。",
+    "設定エントリの説明は空にできません。",
+    "設定エントリに設定キーリストが空にできません。",
+    "設定キー名は空にできません。",
+    "設定キーに無効なキータイプが含まれていてはいけません。"
   ]
 }
