--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor.json
@@ -4216,6 +4216,11 @@
     "jalmosdoen kontencheulo gibon seoljeong-eul deungloghalyeogo habnida. jasehan naeyong-eun keoneol dibeogeoleul chamjohaseyo.",
     "hangmog-eul seontaeghaseyo.",
     "guseong-eul seontaeghal su eobs-seubnida.",
-    "hana isang-ui guseong hangmog-e jalmosdoen byeonsu ttoneun yeolgeohyeong-i iss-eo sujeonghaeya habnida. jasehan naeyong-eun keoneol dibeogeoleul chamjohaseyo."
+    "hana isang-ui guseong hangmog-e jalmosdoen byeonsu ttoneun yeolgeohyeong-i iss-eo sujeonghaeya habnida. jasehan naeyong-eun keoneol dibeogeoleul chamjohaseyo.",
+    "seoljeong hangmog ileum-i bieo iss-eul su eobs-seubnida.",
+    "seoljeong hangmog seolmyeong-i bieo iss-eul su eobs-seubnida.",
+    "seoljeong hangmog-e bin seoljeong ki moglog-i iss-eul su eobs-seubnida.",
+    "seoljeong ki ileum-i bieo iss-eul su eobs-seubnida.",
+    "seoljeong kie jalmosdoen ki yuhyeong-i iss-eul su eobs-seubnida."
   ]
 }
