--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
@@ -4216,6 +4216,11 @@
     "Subcriptio turpem occasum cum invalido contentum esse conatur. Consule nucleum debugger pro more info",
     "Elige quod noti",
     "Non potest eligere configuratione",
-    "Viscus configurationis unus vel plures varias variabiles vel enumerationes irritas habent et fixa indigent. Consule debugger nucleum pro more info."
+    "Viscus configurationis unus vel plures varias variabiles vel enumerationes irritas habent et fixa indigent. Consule debugger nucleum pro more info.",
+    "Occasus ingressum nomen non sit vacua",
+    "Occasus viscus descriptio non vacua",
+    "Occasus ingressum non habet inanis occasus key album",
+    "Optiones key nomen non sit vacua",
+    "Optiones clavis non potest habere irritum key genus"
   ]
 }
