--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
@@ -4216,6 +4216,11 @@
     "尝试注册包含无效内容的基本设置。有关更多信息，请咨询内核调试器。",
     "选择一个条目",
     "无法选择配置",
-    "一个或多个配置条目包含无效变量或枚举，需要修复。有关更多信息，请咨询内核调试器。"
+    "一个或多个配置条目包含无效变量或枚举，需要修复。有关更多信息，请咨询内核调试器。",
+    "设置条目名称不能为空",
+    "设置条目描述不能为空",
+    "设置条目的设置键列表不能为空",
+    "设置键名称不能为空",
+    "设置键不能包含无效的键类型"
   ]
 }
