--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
@@ -4216,6 +4216,11 @@
     "Chángshì zhùcè jùyǒu wúxiào nèiróng de jīběn shèdìng. Cháyuè nèihé tiáoshì qì yǐ huòqǔ gèng duō xìnxī",
     "xuǎnzé yīgè tiáomù",
     "wúfǎ xuǎnzé pèizhì",
-    "yīgè huò duō gè pèizhì tiáomù jùyǒu wúxiào biànshù huò méi jǔ, xūyào xiūfù. Qǐng cháyuè nèihé tiáoshì qì yǐ huòqǔ gèng duō zīxùn."
+    "yīgè huò duō gè pèizhì tiáomù jùyǒu wúxiào biànshù huò méi jǔ, xūyào xiūfù. Qǐng cháyuè nèihé tiáoshì qì yǐ huòqǔ gèng duō zīxùn.",
+    "Shèdìng tiáomù míngchēng bùnéng wéi kōng",
+    "shèdìng tiáomù miáoshù bùnéng wéi kōng",
+    "shèdìng tiáomù kěnéng méiyǒu kòng de shèdìng jiàn lièbiǎo",
+    "shèdìng jiàn míngchēng bùnéng wéi kōng",
+    "shèdìng jiàn kěnéng bù bāohán wúxiào de jiàn lèixíng"
   ]
 }
