--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/dtc.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/dtc.json
@@ -4216,6 +4216,11 @@
     "Proberen een basisinstelling met ongeldige inhoud te registreren. Raadpleeg de kerneldebugger voor meer informatie.",
     "Kies een item voor",
     "Kan configuratie niet selecteren",
-    "Een of meer configuratie-items bevatten ongeldige variabelen of opsommingen en moeten worden hersteld. Raadpleeg de kerneldebugger voor meer informatie."
+    "Een of meer configuratie-items bevatten ongeldige variabelen of opsommingen en moeten worden hersteld. Raadpleeg de kerneldebugger voor meer informatie.",
+    "De naam van het instellingenitem mag niet leeg zijn",
+    "De beschrijving van het instellingenitem mag niet leeg zijn",
+    "Het instellingenitem mag geen lege lijst met instellingensleutels bevatten",
+    "De naam van de instellingensleutel mag niet leeg zijn",
+    "De instellingensleutel mag geen ongeldig sleuteltype bevatten"
   ]
 }
