--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/fre.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/fre.json
@@ -4216,6 +4216,11 @@
     "Tentative d'enregistrement d'un paramètre de base avec un contenu non valide. Consultez le débogueur du noyau pour plus d'informations.",
     "Choisissez une entrée pour",
     "Impossible de sélectionner la configuration",
-    "Une ou plusieurs entrées de configuration contiennent des variables ou des énumérations non valides et doivent être corrigées. Consultez le débogueur du noyau pour plus d'informations."
+    "Une ou plusieurs entrées de configuration contiennent des variables ou des énumérations non valides et doivent être corrigées. Consultez le débogueur du noyau pour plus d'informations.",
+    "Le nom de l'entrée de paramètres peut être rempli.",
+    "La description de l'entrée de paramètres peut être remplie.",
+    "La liste des touches de paramètres peut être remplie.",
+    "Le nom de la touche de paramètres peut être rempli.",
+    "La touche de paramètres peut contenir un type de touche non valide."
   ]
 }
