--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor-T.json
@@ -4216,6 +4216,11 @@
     "잘못된 콘텐츠로 기본 설정을 등록하려고 합니다. 자세한 내용은 커널 디버거를 참조하세요.",
     "항목을 선택하세요.",
     "구성을 선택할 수 없습니다.",
-    "하나 이상의 구성 항목에 잘못된 변수 또는 열거형이 있어 수정해야 합니다. 자세한 내용은 커널 디버거를 참조하세요."
+    "하나 이상의 구성 항목에 잘못된 변수 또는 열거형이 있어 수정해야 합니다. 자세한 내용은 커널 디버거를 참조하세요.",
+    "설정 항목 이름이 비어 있을 수 없습니다.",
+    "설정 항목 설명이 비어 있을 수 없습니다.",
+    "설정 항목에 빈 설정 키 목록이 있을 수 없습니다.",
+    "설정 키 이름이 비어 있을 수 없습니다.",
+    "설정 키에 잘못된 키 유형이 있을 수 없습니다."
   ]
 }
