--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/nor.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/nor.json
@@ -4216,6 +4216,11 @@
     "Prøver å registrere en basisinnstilling med ugyldig innhold. Se kjernefeilsøkeren for mer informasjon",
     "Velg en oppføring for",
     "Kan ikke velge konfigurasjon",
-    "En eller flere av konfigurasjonsoppføringene har ugyldige variabler eller oppregninger og må fikses. Se kjernefeilsøkeren for mer informasjon."
+    "En eller flere av konfigurasjonsoppføringene har ugyldige variabler eller oppregninger og må fikses. Se kjernefeilsøkeren for mer informasjon.",
+    "Innstillingsoppføringsnavnet er kanskje ikke tomt",
+    "Innstillingsbeskrivelsen er kanskje ikke tom",
+    "Innstillingsoppføringen har kanskje ikke tom innstillingsnøkkelliste",
+    "Innstillingsnøkkelnavnet er kanskje ikke tomt",
+    "Innstillingsnøkkel inneholder kanskje ikke ugyldig nøkkeltype"
   ]
 }
