--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
@@ -4216,6 +4216,11 @@
     "Спроба зареєструвати базове налаштування з недійсним вмістом. Зверніться до налагоджувача ядра для отримання додаткової інформації",
     "Виберіть запис для",
     "Не вдається вибрати конфігурацію",
-    "Один або кілька записів конфігурації містять недійсні змінні або перерахування, і їх потрібно виправити. Зверніться до налагоджувача ядра для отримання додаткової інформації."
+    "Один або кілька записів конфігурації містять недійсні змінні або перерахування, і їх потрібно виправити. Зверніться до налагоджувача ядра для отримання додаткової інформації.",
+    "Назва параметрів не може бути пустою",
+    "Опис параметрів не може бути порожнім",
+    "Запис налаштувань може не мати пустого списку ключів налаштувань",
+    "Назва ключа налаштувань не може бути пустою",
+    "Ключ налаштувань може не містити недійсний тип ключа"
   ]
 }
