--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/vtn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/vtn.json
@@ -4216,6 +4216,11 @@
     "Đang cố gắng đăng ký một thiết lập cơ sở với nội dung không hợp lệ. Tham khảo trình gỡ lỗi hạt nhân để biết thêm thông tin",
     "Chọn một mục nhập cho",
     "Không thể chọn cấu hình",
-    "Một hoặc nhiều mục nhập cấu hình có các biến hoặc liệt kê không hợp lệ và cần được sửa. Tham khảo trình gỡ lỗi hạt nhân để biết thêm thông tin."
+    "Một hoặc nhiều mục nhập cấu hình có các biến hoặc liệt kê không hợp lệ và cần được sửa. Tham khảo trình gỡ lỗi hạt nhân để biết thêm thông tin.",
+    "Tên mục nhập cài đặt không được để trống",
+    "Mô tả mục nhập cài đặt không được để trống",
+    "Mục nhập cài đặt không được để trống danh sách khóa cài đặt",
+    "Tên khóa cài đặt không được để trống",
+    "Khóa cài đặt không được giữ loại khóa không hợp lệ"
   ]
 }
