add - Added new localizations (validation)
---

We've added localizations for the settings validation mechanism.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
@@ -4430,6 +4430,11 @@
     "لا يمكن تحديد التكوين",
     "حدد التكوين",
     "يُطلب منك تحديد نسخة تكوين",
-    "إعدادات شاشة التوقف..."
+    "إعدادات شاشة التوقف...",
+    "قد لا يكون اسم إدخال الإعدادات فارغًا.",
+    "قد لا يكون وصف إدخال الإعدادات فارغًا.",
+    "قد لا تحتوي قائمة مفاتيح الإعدادات على إدخال إعدادات فارغ.",
+    "قد لا يكون اسم مفتاح الإعدادات فارغًا.",
+    "قد لا يحتوي مفتاح الإعدادات على نوع مفتاح غير صالح."
   ]
 }
