--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
@@ -4430,6 +4430,11 @@
     "无法选择配置",
     "选择配置",
     "提示您选择配置实例",
-    "屏幕保护程序设置..."
+    "屏幕保护程序设置...",
+    "设置条目名称不能为空",
+    "设置条目描述不能为空",
+    "设置条目的设置键列表不能为空",
+    "设置键名称不能为空",
+    "设置键不能包含无效的键类型"
   ]
 }
