--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi.json
@@ -4430,6 +4430,11 @@
     "Wúfǎ xuǎnzé pèizhì",
     "xuǎnzé pèizhì",
     "tíshì nín xuǎnzé pèizhì shílì",
-    "Píngmù bǎohù chéngxù shèzhì..."
+    "Píngmù bǎohù chéngxù shèzhì...",
+    "Shèzhì tiáomù míngchēng bùnéng wéi kōng",
+    "shèzhì tiáomù miáoshù bùnéng wéi kōng",
+    "shèzhì tiáomù dì shèzhì jiàn lièbiǎo bùnéng wéi kōng",
+    "shèzhì jiàn míngchēng bùnéng wéi kōng",
+    "shèzhì jiàn bùnéng bāohán wúxiào de jiàn lèixíng"
   ]
 }
