--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt-T.json
@@ -4430,6 +4430,11 @@
     "無法選擇配置",
     "選擇配置",
     "提示您選擇配置實例",
-    "螢幕保護程式設定..."
+    "螢幕保護程式設定...",
+    "設定條目名稱不能為空",
+    "設定條目描述不能為空",
+    "設定條目可能沒有空的設定鍵列表",
+    "設定鍵名稱不能為空",
+    "設定鍵可能不包含無效的鍵類型"
   ]
 }
