--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/grk.json
@@ -4430,6 +4430,11 @@
     "Δεν είναι δυνατή η επιλογή διαμόρφωσης",
     "Επιλέξτε διαμόρφωση",
     "Σας ζητά να επιλέξετε μια παρουσία διαμόρφωσης",
-    "Ρυθμίσεις προφύλαξης οθόνης..."
+    "Ρυθμίσεις προφύλαξης οθόνης...",
+    "Το όνομα καταχώρισης ρυθμίσεων ενδέχεται να μην είναι κενό",
+    "Η περιγραφή της καταχώρισης ρυθμίσεων ενδέχεται να μην είναι κενή",
+    "Η καταχώριση ρυθμίσεων ενδέχεται να μην έχει κενή λίστα πλήκτρων ρυθμίσεων",
+    "Το όνομα του κλειδιού ρυθμίσεων ενδέχεται να μην είναι κενό",
+    "Το κλειδί ρυθμίσεων ενδέχεται να μην περιέχει μη έγκυρο τύπο κλειδιού"
   ]
 }
