--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
@@ -4430,6 +4430,11 @@
     "konfigareshan nahin chuna ja sakata",
     "konfigareshan chunen",
     "aapako konfigareshan instens chunane ke lie sanket deta hai",
-    "skreenasevar setings..."
+    "skreenasevar setings...",
+    "seting pravishti ka naam rikt nahin ho sakata",
+    "seting pravishti ka vivaran rikt nahin ho sakata",
+    "seting pravishti mein rikt seting kunjee soochee nahin ho sakatee",
+    "seting kunjee ka naam rikt nahin ho sakata",
+    "seting kunjee mein amaany kunjee prakaar nahin ho sakata"
   ]
 }
