--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/nor.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/nor.json
@@ -4430,6 +4430,11 @@
     "Kan ikke velge konfigurasjon",
     "Velg konfigurasjon",
     "Ber deg velge en konfigurasjonsforekomst",
-    "Skjermsparerinnstillinger..."
+    "Skjermsparerinnstillinger...",
+    "Innstillingsoppføringsnavnet er kanskje ikke tomt",
+    "Innstillingsbeskrivelsen er kanskje ikke tom",
+    "Innstillingsoppføringen har kanskje ikke tom innstillingsnøkkelliste",
+    "Innstillingsnøkkelnavnet er kanskje ikke tomt",
+    "Innstillingsnøkkel inneholder kanskje ikke ugyldig nøkkeltype"
   ]
 }
