--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/tky.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/tky.json
@@ -4430,6 +4430,11 @@
     "Yapılandırma seçilemiyor",
     "Yapılandırmayı seçin",
     "Bir yapılandırma örneği seçmenizi ister",
-    "Ekran koruyucu ayarları..."
+    "Ekran koruyucu ayarları...",
+    "Ayarlar giriş adı boş olmayabilir",
+    "Ayarlar giriş açıklaması boş olmayabilir",
+    "Ayarlar girişi boş ayarlar anahtar listesine sahip olmayabilir",
+    "Ayarlar anahtar adı boş olmayabilir",
+    "Ayarlar anahtarı geçersiz anahtar türünü tutamayabilir"
   ]
 }
