--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
@@ -4430,6 +4430,11 @@
     "Не вдається вибрати конфігурацію",
     "Виберіть конфігурацію",
     "Пропонує вибрати екземпляр конфігурації",
-    "Налаштування заставки..."
+    "Налаштування заставки...",
+    "Назва параметрів не може бути пустою",
+    "Опис параметрів не може бути порожнім",
+    "Запис налаштувань може не мати пустого списку ключів налаштувань",
+    "Назва ключа налаштувань не може бути пустою",
+    "Ключ налаштувань може не містити недійсний тип ключа"
   ]
 }
