--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/brz.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/brz.json
@@ -4430,6 +4430,11 @@
     "Não é possível selecionar a configuração",
     "Selecionar configuração",
     "Solicita que você selecione uma instância de configuração",
-    "Configurações do protetor de tela..."
+    "Configurações do protetor de tela...",
+    "O nome da entrada de configurações não pode estar vazio.",
+    "A descrição da entrada de configurações não pode estar vazia.",
+    "A entrada de configurações não pode ter uma lista de chaves de configurações vazia.",
+    "O nome da chave de configurações não pode estar vazio.",
+    "A chave de configurações não pode conter um tipo de chave inválido."
   ]
 }
