--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
@@ -4430,6 +4430,11 @@
     "Wúfǎ xuǎnzé pèizhì",
     "xuǎnzé pèizhì",
     "tíshì nín xuǎnzé pèizhì shílì",
-    "Yíngmù bǎohù chéngshì shèdìng..."
+    "Yíngmù bǎohù chéngshì shèdìng...",
+    "Shèdìng tiáomù míngchēng bùnéng wéi kōng",
+    "shèdìng tiáomù miáoshù bùnéng wéi kōng",
+    "shèdìng tiáomù kěnéng méiyǒu kòng de shèdìng jiàn lièbiǎo",
+    "shèdìng jiàn míngchēng bùnéng wéi kōng",
+    "shèdìng jiàn kěnéng bù bāohán wúxiào de jiàn lèixíng"
   ]
 }
