--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ger.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ger.json
@@ -4430,6 +4430,11 @@
     "Konfiguration kann nicht ausgewählt werden.",
     "Konfiguration auswählen.",
     "Sie werden aufgefordert, eine Konfigurationsinstanz auszuwählen.",
-    "Bildschirmschonereinstellungen..."
+    "Bildschirmschonereinstellungen...",
+    "Der Name des Einstellungseintrags darf nicht leer sein.",
+    "Die Beschreibung des Einstellungseintrags darf nicht leer sein.",
+    "Die Liste der Einstellungsschlüssel darf nicht leer sein.",
+    "Der Name des Einstellungsschlüssels darf nicht leer sein.",
+    "Der Einstellungsschlüssel darf keinen ungültigen Schlüsseltyp enthalten."
   ]
 }
