--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
@@ -4430,6 +4430,11 @@
     "構成を選択できません",
     "構成を選択してください",
     "構成インスタンスを選択するように求められます",
-    "スクリーンセーバーの設定..."
+    "スクリーンセーバーの設定...",
+    "設定エントリ名は空にできません。",
+    "設定エントリの説明は空にできません。",
+    "設定エントリに設定キーリストが空にできません。",
+    "設定キー名は空にできません。",
+    "設定キーに無効なキータイプが含まれていてはいけません。"
   ]
 }
