--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor-T.json
@@ -4430,6 +4430,11 @@
     "구성을 선택할 수 없습니다.",
     "구성을 선택하세요.",
     "구성 인스턴스를 선택하라는 메시지가 표시됩니다.",
-    "스크린세이버 설정..."
+    "스크린세이버 설정...",
+    "설정 항목 이름이 비어 있을 수 없습니다.",
+    "설정 항목 설명이 비어 있을 수 없습니다.",
+    "설정 항목에 빈 설정 키 목록이 있을 수 없습니다.",
+    "설정 키 이름이 비어 있을 수 없습니다.",
+    "설정 키에 잘못된 키 유형이 있을 수 없습니다."
   ]
 }
