--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
@@ -4430,6 +4430,11 @@
     "Non potest eligere configuratione",
     "Configuratione Select",
     "Monet te eligere configuratione exempli",
-    "Screensaver occasus..."
+    "Screensaver occasus...",
+    "Occasus ingressum nomen non sit vacua",
+    "Occasus viscus descriptio non vacua",
+    "Occasus ingressum non habet inanis occasus key album",
+    "Optiones key nomen non sit vacua",
+    "Optiones clavis non potest habere irritum key genus"
   ]
 }
