--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/mal.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/mal.json
@@ -4430,6 +4430,11 @@
     "Tidak dapat memilih konfigurasi",
     "Pilih konfigurasi",
     "Mengesa anda untuk memilih contoh konfigurasi",
-    "Tetapan penyelamat skrin..."
+    "Tetapan penyelamat skrin...",
+    "Nama masukan tetapan mungkin tidak kosong",
+    "Perihalan entri tetapan mungkin tidak kosong",
+    "Entri tetapan mungkin tidak mempunyai senarai kunci tetapan kosong",
+    "Nama kunci tetapan mungkin tidak kosong",
+    "Kunci tetapan mungkin tidak menyimpan jenis kunci yang tidak sah"
   ]
 }
