--- a/CHANGES
+++ b/CHANGES
@@ -1,14 +1,9 @@
-Halfway there! 50/50! We are announcing Nitrocid KS 0.1.0.50 to bring in some new features from 0.1.3 and 0.1.2!
-
-From Nitrocid KS 0.1.0.0 (March 11th, 2025) to Nitrocid KS 0.1.0.50 (as of now), we have achieved a minor milestone!
+We've released this version to improve some areas
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[+]` Added `SMultivar`
-- `[+]` Added VB templates
-- `[*]` Improved the calendar look
 - `[*]` General improvements and bug fixes
 
 Review the commit history if you want to get a deep insight about the changes.
