--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,10 @@
-We've released a version to improve the settings selection logic.
+We've released a version to improve some more areas.
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[*]` Improved the settings selection logic
+- `[*]` General improvements and bug fixes
 
 Review the commit history if you want to get a deep insight about the changes.
 
