--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.49-0.1.2.16-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Mon, 26 May 2025 18:11:23 +0300
+
 nitrocid-27 (3.1.27.49-0.1.2.15-1) noble; urgency=medium
 
   * Improved the settings selection logic
